<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:contentDescription="@string/we_short"
        android:scaleType="fitCenter"
        android:src="@drawable/ok" />

    <TextView
        android:id="@+id/wetex"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
       	android:layout_weight="1"
        android:text="@string/weekend" />

    <Button
        android:id="@+id/we_ok_but"
          android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:text="@string/we_ok" />

</LinearLayout>
